--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <main>
         <section>
-            <img src="./img/itc.png" alt="">
+            <figure>
+                <img src="./img/itc.png" alt="">
+            </figure>
+
         </section>
 
         <section>
